updated help & fixed mistranslations

--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -31,6 +31,10 @@
             <td><p>Очищает холст. Восстанавливает качество после приближения/удаления.</p></td>
         </tr>
         <tr>
+            <td><img src="icons/ic_screenshot.svg" alt="screenshot-button"></td>
+            <td><p>Сделать скриншот. Чтобы сохранить скриншот вы должны разрешить приложению запись файлов.</p></td>
+        </tr>
+        <tr>
             <td><img src="icons/ic_autocenter.svg" alt="autocenter-button"></td>
             <td><p>Автоцентровка. Перемещает к примерному центру <i>ddu</i>-картины.</p></td>
         </tr>
