added toolbar cuztomization into settings + other QoL as per feedback

--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -39,6 +39,10 @@
             <td><p>Автоцентровка. Перемещает к примерному центру <i>ddu</i>-картины.</p></td>
         </tr>
         <tr>
+            <td><img src="icons/ic_restore.svg" alt="restart-button"></td>
+            <td><p>Отменяет все изменения и перезапускает <i>ddu</i>-картину после 3-секундной задержки.</p></td>
+        </tr>
+        <tr>
             <td><img src="icons/ic_help.svg" alt="help-button"></td>
             <td><p>Показывает данную справку.</p></td>
         </tr>
