--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -39,6 +39,10 @@
             <td><p>Autocenter. It moves you to the approximate center of the <i>ddu</i>-picture.</p></td>
         </tr>
         <tr>
+            <td><img src="icons/ic_restore.svg" alt="restart-button"></td>
+            <td><p>Restarts the <i>ddu</i>-picture (undoes all changes) after 3s delay.</p></td>
+        </tr>
+        <tr>
             <td><img src="icons/ic_help.svg" alt="help-button"></td>
             <td><p>Show this help.</p></td>
         </tr>
