--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -43,6 +43,10 @@
             <td><p>Отменяет все изменения и перезапускает <i>ddu</i>-картину после 3-секундной задержки.</p></td>
         </tr>
         <tr>
+            <td><img src="icons/ic_bucket_fill.svg" alt="fill-button"></td>
+            <td><p>Заливка. Выбирает, показывать полые окружности или круги.</p></td>
+        </tr>
+        <tr>
             <td><img src="icons/ic_help.svg" alt="help-button"></td>
             <td><p>Показывает данную справку.</p></td>
         </tr>
