--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -40,7 +40,11 @@
         </tr>
         <tr>
             <td><img src="icons/ic_restore.svg" alt="restart-button"></td>
-            <td><p>Restarts the <i>ddu</i>-picture (undoes all changes) after 3s delay.</p></td>
+            <td><p>Restart the <i>ddu</i>-picture (& undo all changes) after 3s delay.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_bucket_fill.svg" alt="fill-button"></td>
+            <td><p>Fill. Toggle between disks <-> rings.</p></td>
         </tr>
         <tr>
             <td><img src="icons/ic_help.svg" alt="help-button"></td>
